--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "config": "^2.0.1",
     "express": "^4.16.4",
+    "pusher": "^2.1.3",
     "twilio": "^3.24.0"
   },
   "devDependencies": {
